--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 <title>
 {% if site.title == "blank" %}
-  {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}
+  {{ site.first_name }}{{ site.middle_name }}{{ site.last_name }}
 {% else %}
   {{ site.title }}
 {% endif %}
@@ -40,6 +40,7 @@
 {% if site.icon != empty %}
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ site.icon }}</text></svg>">
 {% endif %}
+<link rel="shortcut icon" href="{{ '/assets/img/favicon.ico' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | relative_url }}">
 
