--- a/_includes/news.html
+++ b/_includes/news.html
@@ -6,10 +6,10 @@
       {% assign news = site.news | reverse %}
       {% for item in news limit: site.news_limit %}
         <tr>
-          <th scope="row">{{ item.date | date: "%b %-d, %Y" }}</th>
+          <th scope="row" style='width: 100px;'>{{ item.date | date: "%b %-d, %Y" }}</th>
           <td>
             {% if item.inline %}
-              {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+            {% if item.new %} <mark><i>new</i></mark> {% endif %} {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
             {% else %}
               <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
             {% endif %}
