--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,9 +6,9 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span>{{ site.middle_name }}{{ site.last_name }}{% else %}{{ site.title }}{% endif %}
     </h1>
-     <p class="desc">{{ page.description }}</p>
+     <p class="desc" style="font-size: 0.9rem;">{{ page.description }}</p>
   </header>
 
   <article>
@@ -18,7 +18,7 @@ layout: default
         <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
       {% endif %}
       {% if page.profile.address %}
-        <div class="address">
+        <div class="address" style="font-size: 0.9rem;">
           {{ page.profile.address }}
         </div>
       {% endif %}
