--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,13 +8,17 @@ p, h1, h2, h3, h4, h5, h6, em, div, span, strong {
   color: var(--global-text-color);
 }
 
+article div {
+  margin-bottom: 1rem;
+}
+
 a, table.table a {
   color: var(--global-theme-color);
   &:hover {
     color: var(--global-theme-color);
     text-decoration: underline;
   }
-  &:hover:after {
+  &:hover:after :not(.nav-item.dropdown) {
     width: 100%;
   }
 }
@@ -58,6 +62,7 @@ blockquote {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    font-size: 1.2rem;
     p {
       display: inline-block;
       margin: 0;
@@ -500,4 +505,9 @@ html.transition *:before,
 html.transition *:after {
   transition: all 750ms !important;
   transition-delay: 0 !important;
+}
+
+mark {
+  background-color: var(--global-code-bg-color);
+  color: var(--global-theme-color);
 }
