updated to new news format

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,22 +3,26 @@
   {% if site.news  %}
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
-      {% assign news = site.news | reverse %}
-      {% for item in news limit: site.news_limit %}
-        <tr>
-          <th scope="row" style='width: 100px;'>{{ item.date | date: "%b %-d, %Y" }}</th>
-          <td>
-            {% if item.inline %}
-            {% if item.new %} <mark><i>new</i></mark> {% endif %} {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
-            {% else %}
-              <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-            {% endif %}
-          </td>
-        </tr>
-      {% endfor %}
-      </table>
-    </div>
-  {% else %}
-    <p>No news so far...</p>
-  {% endif %}
+        {% assign news_all = "" | split: ',' %}
+        {% assign news_for_years = site.data.news  %}
+        {% for news_list_in_year in news_for_years %}
+          {% for each_news in news_list_in_year[1] %}
+            {% assign news_all = news_all | push: each_news %}
+          {% endfor %}
+        {% endfor %}
+        {% assign news_sorted = news_all | sort: 'date' | reverse %}
+  
+        {% for item in news_sorted limit: site.news_limit %}
+          <tr>
+            <th scope="row" style='width: 100px;'>{{ item.date | date: "%b %-d, %Y" }}</th>
+            <td>
+              {% if item.new %} <mark><i>new</i></mark> {% endif %} {{ item.content | remove: '<p>' | remove: '</p>' | emojify }} {{ item.text }}
+            </td>
+          </tr>
+        {% endfor %}
+        </table>
+      </div>
+    {% else %}
+      <p>No news so far...</p>
+    {% endif %}
 </div>
